[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/portal.gd" type="Script" id=1]
[ext_resource path="res://room/TransitionScene.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 270.0

[node name="portal" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["next_room"]]
position = Vector2( 15, 426 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, -38 )
shape = SubResource( 1 )

[node name="TransitionScene" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="transitioned" from="TransitionScene" to="." method="_on_TransitionScene_transitioned"]
